--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -18,11 +18,7 @@
 }
 
 .btn-white {
-    font-family: 'Manrope', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
+    background: #fff;
     color: #6567F2;
     border: 1px solid #6567F2;
     transition: .3s all;
