--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,7 @@
 *:active, *:focus, *:focus-within, *:target, *:hover, *:visited, *:focus-visible {
     outline: none !important;
 }
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -37,32 +37,32 @@ label, button {
     cursor: pointer;
 }
 
-// #slider-round {
-//     height: 8px;
-// }
+#slider-round {
+    height: 2px;
+}
 
-// #slider-round {
-//     border: none !important;
-//     box-shadow: none !important;
-// }
+#slider-round {
+    border: none !important;
+    box-shadow: none !important;
+}
 
-// #slider-round .noUi-connect {
-//     background: #15B8A5;
-// }
+#slider-round .noUi-connect {
+    background: #6567F2;
+}
 
 
-// #slider-round .noUi-handle {
-//     height: 14px;
-//     width: 14px;
-//     top: -3px;
-//     right: -7px; /* half the width */
-//     border-radius: 100%;
-//     background: #FFFFFF;
-//     border: 1px solid #15B8A5;
-//     box-sizing: border-box;
-//     &::before, &::after {
-//         display: none
-//     }
-// }
+#slider-round .noUi-handle {
+    height: 12px;
+    width: 12px;
+    top: -5px;
+    right: -6px; /* half the width */
+    border-radius: 100%;
+    background: #FFFFFF;
+    border: 3px solid #6567F2;
+    box-sizing: border-box;
+    &::before, &::after {
+        display: none
+    }
+}
 
 @import './import';
