--- a/src/scss/block/_calc.scss
+++ b/src/scss/block/_calc.scss
@@ -327,6 +327,7 @@
                 padding: 0px 20px;
                 border-radius: 4px;
                 border: none;
+                white-space: nowrap;
             }
         }
     }
@@ -336,6 +337,155 @@
     .calc__select.active {
         .calc__value > a > svg {
             transform: rotate(180deg);
+        }
+    }
+}
+@media (max-width: 1230px) {
+    .calc {
+        &__sale {
+            max-width: 310px;
+            width: 100%;
+            overflow: hidden;
+        }
+    }
+}
+@media (max-width: 1022px) {
+    .calc {
+        &__location {
+            .grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+        &__sale {
+            display: none;
+        }
+    }
+}
+@media (max-width: 798px) {
+    .calc {
+        &__location {
+            .grid {
+                grid-template-columns: repeat(2, 1fr);
+                column-gap: 8px;
+                row-gap: 10px;
+            }
+            &-buttons {
+                .text {
+                    font-size: 15px;
+                }
+                .next {
+                    white-space: nowrap;
+                }
+            }
+        }
+        &__square {
+            &-label {
+                font-size: 18px;
+            }
+            &-top {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 30px;
+            }
+        }
+        &__counters {
+            .grid {
+                column-gap: 22px;
+            }
+        }
+    }
+}
+@media (max-width: 625px) {
+    .calc {
+        &__counters {
+            .grid {
+                grid-template-columns: 1fr;
+                column-gap: 0px;
+                row-gap: 24px;
+                width: 100%;
+            }
+            &-wr {
+                input {
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+@media (max-width: 606px) {
+    .calc {
+        &__step {
+            &-label {
+                p {
+                    font-size: 20px;
+                }
+            }
+        }
+        &__location {
+            &-card {
+                padding: 15px;
+            }
+            &-name {
+                .text {
+                    font-size: 15px;
+                }
+            }
+        }
+        &__form {
+            &-label {
+                font-size: 20px;
+                line-height: 150%;
+            }
+        }
+    }
+}
+@media (max-width: 475px) {
+    .calc {
+        &__location {
+            &-img {
+                height: 160px;
+                img {
+                    height: 160px;
+                }
+            }
+        }
+        &__value {
+            p {
+                span {
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+}
+@media (max-width: 400px) {
+    .calc {
+        &__location {
+            &-buttons {
+                .text {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+}
+@media (max-width: 375px) {
+    .calc {
+        &__location {
+            .grid {
+                grid-template-columns: 1fr;
+                column-gap: 0px;
+            }
+            &-buttons {
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+        }
+        &__form {
+            div{
+                flex-direction: column;
+                gap: 15px;
+            }
         }
     }
 }
