--- a/src/scss/block/_banner.scss
+++ b/src/scss/block/_banner.scss
@@ -12,7 +12,7 @@
         color: #0F1729;
         max-width: 595px;
         width: 100%;
-        margin: 50px 0px 40px 0px;
+        margin: 50px 0px 30px 0px;
         br {
             display: none;
         }
@@ -24,10 +24,10 @@
         font-size: 20px;
         line-height: 120%;
         color: #334155;
-        margin-bottom: 50px;
-        br {
-            display: none;
-        }
+        margin-bottom: 40px;
+        // br {
+        //     display: none;
+        // }
         span {
             color: #6567F2;
         }
@@ -37,14 +37,48 @@
         width: 100%;
         height: 80px;
         margin-bottom: 15px;
-        picture {
-            width: 100%;
-            height: 100%;
+        display: flex;
+        align-items: center;
+        position: relative;
+        div {
+            position: absolute;
+            width: 80px;
+            height: 80px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 100%;
+            border: 4px solid #fff;
+            overflow: hidden;
+            picture {
+                width: 100%;
+                height: 100%;
+            }
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+        &-1 {
+            z-index: 1;
+            left: 0;
+            top: 0;
+        }
+        &-2 {
+            z-index: 2;
+            left: 64px;
+            top: 0;
+        }
+        &-3 {
+            z-index: 3;
+            left: 128px;
+            top: 0;
+        }
+        &-4 {
+            z-index: 4;
+            left: 192px;
+            top: 0;
         }
     }
     &__counter-people {
@@ -198,10 +232,18 @@
             border-radius: 4px;
             padding: 0px 12px;
             height: 48px;
-            font-size: 16px;
-            line-height: 20px;
+            // font-size: 16px;
+            // line-height: 20px;
+            // color: #171717;
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 150%;
+            letter-spacing: -.01em;
             color: #171717;
             &::placeholder {
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 20px;
                 color: #94A3B8;
             }
         }
