--- a/src/scss/block/_production.scss
+++ b/src/scss/block/_production.scss
@@ -1,5 +1,6 @@
 .production {
     padding: 36px 0px;
+    position: relative;
     &__title {
         margin-bottom: 40px;
     }
@@ -34,6 +35,7 @@
     &__slider {
         display: flex;
         align-items: center;
+        gap: 20px;
     }
     &__arrow {
         background: transparent;
@@ -48,6 +50,7 @@
     }
     &__slide {
         display: flex;
+        gap: 40px;
         // display: grid;
         // grid-template-columns: auto auto;
         justify-content: space-between;
@@ -255,6 +258,11 @@
         }
         &__tabs {
             margin-bottom: 8px;
+        }
+        &__slider {
+            button {
+                display: none;
+            }
         }
         &__slide {
             &-img {
