--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -9,6 +9,7 @@
     font-size: 18px;
     line-height: 24px;
     color: #FFFFFF;
+    border-radius: 4px;
     &:hover {
         background: #8485F5;
     }
