--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -152,4 +152,18 @@
       line-height: 32px;
     }
   }
+  .accordion__content {
+    padding-top: 20px;
+    font-size: 18px;
+    line-height: 130%;
+    color: #334155;
+  }
+}
+@media (max-width: 375px) {
+  .accordion__content {
+    padding-top: 20px;
+    font-size: 16px;
+    line-height: 130%;
+    color: #334155;
+  }
 }
