--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,13 +30,13 @@ body {
     // min-width: 320px;
 }
 main {
-    padding-top: 140px;
+    position: relative;
 }
-@media (max-width: 475px) {
-    main {
-        padding-top: 149px;
-    }
-}
+// @media (max-width: 475px) {
+//     main {
+//         padding-top: 149px;
+//     }
+// }
 @media (max-width: 320px) {
     body {
         overflow-x: hidden;
