--- a/src/scss/block/_calc.scss
+++ b/src/scss/block/_calc.scss
@@ -313,7 +313,7 @@
             font-size: 28px;
             line-height: 150%;
             color: #0F172A;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
         }
         div {
             display: flex;
@@ -347,6 +347,22 @@
                 background: #6567F2 !important;
                 opacity: 0.3 !important;
                 pointer-events: none;
+            }
+        }
+        &-label-2 {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 40px;
+            p {
+                font-weight: 500;
+                font-size: 48px;
+                line-height: 120%;
+                color: #5152c2;
+            }
+            span {
+                font-size: 16px;
+                line-height: 140%;
+                color: #334155;
             }
         }
     }
