--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -26,6 +26,12 @@
       width: 125px;
       padding: 0;
       border-radius: 4px;
+      font-family: 'Manrope', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 24px;
+      color: #6567F2;
     }
   }
 }
